--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.1
 Flask==1.1.1
+gunicorn==20.0.4
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.1
 lxml==4.5.0
-requests==2.22.0
+MarkupSafe==1.1.1
+pkg-resources==0.0.0
+requests==2.23.0
+urllib3==1.25.8
+Werkzeug==1.0.0
